--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "git-commands-v2",
+  "name": "assignment-git",
   "version": "1.0.0",
-  "description": "Now that you learned how to perform git commands and pull-request, we will now do another practice.",
+  "description": "",
   "main": "app.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/psyitama/git-commands.git"
-  },
-  "author": "",
+  "author": "Karen Marie Igcasan",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/psyitama/git-commands/issues"
-  },
-  "homepage": "https://github.com/psyitama/git-commands#readme"
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
+    "nodemon": "^2.0.7"
+  }
 }
