--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -2,10 +2,11 @@ name: Github Actions Example
 on:
     push:
         branches:
-            - master
+            - develop
+            - feature
 jobs:
     build:
-        name: Build simple project
+        name: Test Git Commands
         runs-on: ubuntu-latest
         steps:
             - name: Checkout project
